logs/mrsd_ros_tutorials/build.make.114.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int main(int, char**)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:89:39: error: invalid initialization of reference of type ‘const Ptr& {aka const boost::shared_ptr<pcl::PointCloud<pcl::PointXYZ> >&}’ from expression of type ‘sensor_msgs::PointCloud2’
         save_pcd(item_name, ros_msg_pc);
                                       ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:27:6: error: in passing argument 2 of ‘void save_pcd(std::string, const Ptr&)’
 void save_pcd(std::string pc_name, const pcl::PointCloud<pcl::PointXYZ>::Ptr& input_pc)
      ^
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make: *** [all] Error 2
